commit translated contents

--- a/aspnetcore/whats-new/2019-10.md
+++ b/aspnetcore/whats-new/2019-10.md
@@ -66,13 +66,13 @@ Bienvenue dans les nouveautés de ASP.NET Core docs pour le 2019 octobre. Cet ar
 - [Présentation de l’identité sur](../security/authentication/identity.md) la mise à jour ASP.NET Core-3,0, présentation de l’identité
 - [Identité de l’échafaudage dans les projets de ASP.net Core](../security/authentication/scaffold-identity.md) -montre comment désactiver l’inscription
 
-## <a name="tutorials"></a>Didacticiels
+## <a name="tutorials"></a>Tutoriels
 
 ### <a name="updated-articles"></a>Articles mis à jour
 
 - [Didacticiel : prise en main de ASP.net Core signalr](../tutorials/signalr.md) -Restore SignarR 2. x didacticiel
 
-## <a name="web-api"></a>API web
+## <a name="web-api"></a>API Web
 
 ### <a name="updated-articles"></a>Articles mis à jour
 
@@ -80,7 +80,7 @@ Bienvenue dans les nouveautés de ASP.NET Core docs pour le 2019 octobre. Cet ar
 
 ## <a name="community-contributors"></a>Contributeurs de la communauté
 
-Les personnes suivantes ont contribué à ASP.NET Core docs en octobre 2019. Merci Vous pouvez apprendre à contribuer en suivant les liens sous « s’impliquer » sur la [page d’Accueil Nouveautés](index.yml).
+Les personnes suivantes ont contribué à ASP.NET Core docs en octobre 2019. Merci ! Vous pouvez apprendre à contribuer en suivant les liens sous « s’impliquer » sur la [page d’Accueil Nouveautés](index.yml).
 
 - [guardrex](https://github.com/guardrex) -Luke Latham
 - [serpent5](https://github.com/serpent5) -Kirk Larkin
