--- a/aspnetcore/whats-new/2019-11.md
+++ b/aspnetcore/whats-new/2019-11.md
@@ -82,7 +82,7 @@ Bienvenue dans les nouveautés de ASP.NET Core docs pour le 2019 novembre. Cet a
 
 ## <a name="community-contributors"></a>Contributeurs de la communauté
 
-Les personnes suivantes ont contribué à ASP.NET Core docs en novembre 2019. Merci Vous pouvez apprendre à contribuer en suivant les liens sous « s’impliquer » sur la [page d’Accueil Nouveautés](index.yml).
+Les personnes suivantes ont contribué à ASP.NET Core docs en novembre 2019. Merci ! Vous pouvez apprendre à contribuer en suivant les liens sous « s’impliquer » sur la [page d’Accueil Nouveautés](index.yml).
 
 - [guardrex](https://github.com/guardrex) -Luke Latham
 - [damienbod](https://github.com/damienbod) -damienbod
