--- a/aspnetcore/whats-new/2019-12.md
+++ b/aspnetcore/whats-new/2019-12.md
@@ -69,7 +69,7 @@ Bienvenue dans les nouveautés de ASP.NET Core docs pour le 2019 décembre. Cet 
 
 ## <a name="community-contributors"></a>Contributeurs de la communauté
 
-Les personnes suivantes ont contribué à ASP.NET Core docs en décembre 2019. Merci Vous pouvez apprendre à contribuer en suivant les liens sous « s’impliquer » sur la [page d’Accueil Nouveautés](index.yml).
+Les personnes suivantes ont contribué à ASP.NET Core docs en décembre 2019. Merci ! Vous pouvez apprendre à contribuer en suivant les liens sous « s’impliquer » sur la [page d’Accueil Nouveautés](index.yml).
 
 - [guardrex](https://github.com/guardrex) -Luke Latham
 - [serpent5](https://github.com/serpent5) -Kirk Larkin
