commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -21,9 +21,9 @@ Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twit
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant vers ASP.NET Core 3,0.
 
-## <a name="prerequisites"></a>Prerequisites
+## <a name="prerequisites"></a>Conditions préalables requises
 
-# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
+# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-3.0.md)]
 
@@ -158,7 +158,7 @@ Pour afficher la liste complète des packages qui ne sont plus produits, sélect
         <li>Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets</li>
         <li>Microsoft.AspNetCore.Session</li>
         <li>Microsoft. AspNetCore.SignalR</li>
-        <li>Microsoft. AspNetCore.SignalR. Ebauche</li>
+        <li>Microsoft.AspNetCore.SignalR.Ebauche</li>
         <li>Microsoft.AspNetCore.StaticFiles</li>
         <li>Microsoft.AspNetCore.WebSockets</li>
         <li>Microsoft.AspNetCore.WebUtilities</li>
@@ -231,7 +231,7 @@ Pour déterminer si l’application a une dépendance (directe ou indirecte) sur
 }
 ```
 
-Si votre application utilise la station d’accueil, utilisez une image de base qui comprend ASP.NET Core 3,0. Par exemple, `docker pull mcr.microsoft.com/dotnet/core/aspnet:3.0`.
+Si votre application utilise la station d’accueil, utilisez une image de base qui comprend ASP.NET Core 3,0. Par exemple : `docker pull mcr.microsoft.com/dotnet/core/aspnet:3.0`.
 
 ### <a name="add-package-references-for-removed-assemblies"></a>Ajouter des références de package pour les assemblys supprimés
 
@@ -450,7 +450,7 @@ Le sérialiseur JSON par défaut pour ASP.NET Core est désormais <xref:System.T
 
 ### <a name="use-newtonsoftjson-in-an-aspnet-core-30-opno-locsignalr-project"></a>Utiliser Newtonsoft. JSON dans un projet ASP.NET Core 3,0 SignalR
 
-* Installez [Microsoft. AspNetCore.SignalR. Package NuGet Protocols. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson) .
+* Installez [Microsoft.AspNetCore.SignalR.Package NuGet Protocols.NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson).
 
 * Sur le client, chaînez un appel de méthode `AddNewtonsoftJsonProtocol` à l’instance `HubConnectionBuilder` :
 
@@ -657,7 +657,7 @@ Les points de terminaison de contrôle d’intégrité peuvent :
 * Exiger une autorisation.
 * Exiger CORS.
 
-Pour plus d'informations, consultez <xref:host-and-deploy/health-checks>.
+Pour plus d’informations, consultez <xref:host-and-deploy/health-checks>.
 
 ### <a name="security-middleware-guidance"></a>Aide sur le middleware de sécurité
 
@@ -857,7 +857,7 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices`:
+Une nouvelle option permet de contrôler les limites de taille des messages des clients. Par exemple, dans `Startup.ConfigureServices` :
 
 ```csharp
 services.AddSignalR(hubOptions =>
@@ -874,7 +874,7 @@ Le mappage de contrôleurs a maintenant lieu dans `UseEndpoints`.
 
 Ajoutez `MapControllers` si l’application utilise le routage d’attributs. Dans la mesure où le routage inclut la prise en charge de nombreuses infrastructures dans ASP.NET Core 3,0 ou version ultérieure, l’ajout de contrôleurs routés par attribut est un abonnement.
 
-Remplacez les éléments suivants :
+Remplacez le code suivant :
 
 * `MapRoute` avec `MapControllerRoute`
 * `MapAreaRoute` avec `MapAreaControllerRoute`
@@ -949,7 +949,7 @@ services.AddMvc(options =>
 
 #### <a name="changes-to-link-generation"></a>Modifications apportées à la génération de liens
 
-Comme expliqué dans la documentation sur les [différences par rapport aux versions antérieures du routage](xref:fundamentals/routing#differences-from-earlier-versions-of-routing), il existe quelques différences dans la génération de liens (à l’aide de `Url.Link` et d’API similaires, par exemple). Elles incluent notamment :
+Comme expliqué dans la documentation sur les [différences par rapport aux versions antérieures du routage](xref:fundamentals/routing#differences-from-earlier-versions-of-routing), il existe quelques différences dans la génération de liens (à l’aide de `Url.Link` et d’API similaires, par exemple). notamment :
 
 * Par défaut, lors de l’utilisation du routage de point de terminaison, la casse des paramètres d’itinéraire dans les URI générés n’est pas nécessairement préservée. Ce comportement peut être contrôlé à l’aide de l’interface `IOutboundParameterTransformer`.
 * La génération d’un URI pour un itinéraire non valide (un contrôleur/une action ou une page qui n’existe pas) produira une chaîne vide sous le routage de point de terminaison au lieu de produire un URI non valide.
@@ -999,7 +999,7 @@ services.AddControllersWithViews(options => options.EnableEndpointRouting = fals
 services.AddRazorPages().AddMvcOptions(options => options.EnableEndpointRouting = false);
 ```
 
-### <a name="health-checks"></a>Contrôles d’intégrité
+### <a name="health-checks"></a>Contrôles d'intégrité
 
 Les contrôles d’intégrité peuvent être utilisés en tant que *routeur* avec routage des points de terminaison.
 
@@ -1108,7 +1108,7 @@ Si vous utilisez [des fonctionnalités de Newtonsoft. JSON qui ne sont pas prise
 
 ## <a name="redis-distributed-caches"></a>Caches distribués ReDim
 
-Le package [Microsoft. extensions. Caching. redims](https://www.nuget.org/packages/Microsoft.Extensions.Caching.Redis) n’est pas disponible pour les applications ASP.net Core 3,0 ou versions ultérieures. Remplacez la référence de package par [Microsoft. extensions. Caching. StackExchangeRedis](https://www.nuget.org/packages/Microsoft.Extensions.Caching.StackExchangeRedis). Pour plus d'informations, consultez <xref:performance/caching/distributed>.
+Le package [Microsoft. extensions. Caching. redims](https://www.nuget.org/packages/Microsoft.Extensions.Caching.Redis) n’est pas disponible pour les applications ASP.net Core 3,0 ou versions ultérieures. Remplacez la référence de package par [Microsoft. extensions. Caching. StackExchangeRedis](https://www.nuget.org/packages/Microsoft.Extensions.Caching.StackExchangeRedis). Pour plus d’informations, consultez <xref:performance/caching/distributed>.
 
 ## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
@@ -1183,7 +1183,7 @@ Pour plus d’informations sur l’utilisation d’API ASP.NET Core dans une bib
 
 Le système de validation dans .NET Core 3,0 et versions ultérieures traite les paramètres non Nullable ou les propriétés liées comme s’ils avaient un attribut `[Required]`. Pour plus d’informations, consultez [attribut [required]](xref:mvc/models/validation?view=aspnetcore-3.1#required-attribute).
 
-### <a name="publish"></a>Publier
+### <a name="publish"></a>Publish
 
 Supprimez les dossiers *bin* et *obj* dans le répertoire du projet.
 
