--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -6,12 +6,12 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 12/03/2019
 uid: migration/30-to-31
-ms.openlocfilehash: 497f5da7a29d5cdb8b4264c87330e8a464380bf8
-ms.sourcegitcommit: 169ea5116de729c803685725d96450a270bc55b7
+ms.openlocfilehash: 8b30077f005e3ba148e761d2947538a61582fc5b
+ms.sourcegitcommit: 235623b6e5a5d1841139c82a11ac2b4b3f31a7a9
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/03/2019
-ms.locfileid: "74733945"
+ms.lasthandoff: 02/10/2020
+ms.locfileid: "77114781"
 ---
 # <a name="migrate-from-aspnet-core-30-to-31"></a>Migrer de ASP.NET Core 3,0 à 3,1
 
@@ -19,9 +19,9 @@ Par [Scott Addie](https://github.com/scottaddie)
 
 Cet article explique comment mettre à jour un projet ASP.NET Core 3,0 existant vers ASP.NET Core 3,1.
 
-## <a name="prerequisites"></a>Configuration requise
+## <a name="prerequisites"></a>Conditions préalables requises
 
-# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
+# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-3.1.md)]
 
@@ -43,7 +43,7 @@ Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour 
 {
   "sdk": {
 -    "version": "3.0.101"
-+    "version": "3.1.100"
++    "version": "3.1.101"
   }
 }
 ```
@@ -71,8 +71,8 @@ Dans le fichier projet, mettez à jour chaque attribut `Version` de référence 
 <ItemGroup>
 -    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
 -    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0" Condition="'$(Configuration)' == 'Debug'" />
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" Condition="'$(Configuration)' == 'Debug'" />
++    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
++    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.1" Condition="'$(Configuration)' == 'Debug'" />
 </ItemGroup>
 ```
 
