--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Découvrez comment migrer un projet ASP.NET Core 3,0 vers ASP.NET Core 3,1.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/03/2019
+ms.date: 02/12/2020
 uid: migration/30-to-31
-ms.openlocfilehash: 8b30077f005e3ba148e761d2947538a61582fc5b
-ms.sourcegitcommit: 235623b6e5a5d1841139c82a11ac2b4b3f31a7a9
+ms.openlocfilehash: 4eb6916772d71e2b201f8686182fb7f3bc486ede
+ms.sourcegitcommit: 6645435fc8f5092fc7e923742e85592b56e37ada
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/10/2020
-ms.locfileid: "77114781"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77447358"
 ---
 # <a name="migrate-from-aspnet-core-30-to-31"></a>Migrer de ASP.NET Core 3,0 à 3,1
 
@@ -21,15 +21,15 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 3,0 existant 
 
 ## <a name="prerequisites"></a>Conditions préalables requises
 
-# <a name="visual-studiotabvisual-studio"></a>[Visual Studio](#tab/visual-studio)
+# <a name="visual-studio"></a>[Visual Studio](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-3.1.md)]
 
-# <a name="visual-studio-codetabvisual-studio-code"></a>[Visual Studio Code](#tab/visual-studio-code)
+# <a name="visual-studio-code"></a>[Visual Studio Code](#tab/visual-studio-code)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vsc-3.1.md)]
 
-# <a name="visual-studio-for-mactabvisual-studio-mac"></a>[Visual Studio pour Mac](#tab/visual-studio-mac)
+# <a name="visual-studio-for-mac"></a>[Visual Studio pour Mac](#tab/visual-studio-mac)
 
 [!INCLUDE[](~/includes/net-core-prereqs-mac-3.1.md)]
 
@@ -109,4 +109,4 @@ ASP.NET Core 3,1 introduit un tag Helper `Component`. Le tag Helper peut remplac
 + <component type="typeof(Counter)" render-mode="ServerPrerendered" param-IncrementAmount="10" />
 ```
 
-Pour plus d’informations, consultez [intégrer des composants dans des applications Razor pages et MVC](/aspnet/core/blazor/components?view=aspnetcore-3.1#integrate-components-into-razor-pages-and-mvc-apps).
+Pour plus d’informations, consultez [intégrer des composants dans des applications Razor pages et MVC](/aspnet/core/blazor/integrate-components?view=aspnetcore-3.1).
