commit translated contents

--- a/aspnetcore/includes/2.2-SDK.md
+++ b/aspnetcore/includes/2.2-SDK.md
@@ -1,1 +1,1 @@
-[.NET Core 2,2 SDK ou version ultérieure](https://www.microsoft.com/net/download/all)
+[.NET Core 2,2 SDK ou version ultérieure](https://dotnet.microsoft.com/download/dotnet-core)
