commit bilingual contents

--- a/aspnetcore/includes/2.1-SDK.md
+++ b/aspnetcore/includes/2.1-SDK.md
@@ -1,1 +1,1 @@
-[<span data-ttu-id="684da-101">Kit de développement logiciel (SDK) .NET Core 2.1 ou version ultérieure</span><span class="sxs-lookup"><span data-stu-id="684da-101">.NET Core 2.1 SDK or later</span></span>](https://www.microsoft.com/net/download/all)
+[<span data-ttu-id="909d1-101">Kit de développement logiciel (SDK) .NET Core 2.1 ou version ultérieure</span><span class="sxs-lookup"><span data-stu-id="909d1-101">.NET Core 2.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core)
