--- a/aspnetcore/includes/2.2-SDK.md
+++ b/aspnetcore/includes/2.2-SDK.md
@@ -1,1 +1,1 @@
-[<span data-ttu-id="7f142-101">.NET Core 2,2 SDK ou version ultérieure</span><span class="sxs-lookup"><span data-stu-id="7f142-101">.NET Core 2.2 SDK or later</span></span>](https://www.microsoft.com/net/download/all)
+[<span data-ttu-id="a46a5-101">.NET Core 2,2 SDK ou version ultérieure</span><span class="sxs-lookup"><span data-stu-id="a46a5-101">.NET Core 2.2 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core)
