commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,14 +4,14 @@ author: scottaddie
 description: Découvrez comment migrer un projet ASP.NET Core 3,1 vers ASP.NET Core 5,0.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 03/23/2020
+ms.date: 03/24/2020
 uid: migration/31-to-50
-ms.openlocfilehash: 7f225e039f051b43c1896a6f29e174d3c2e6c2d3
-ms.sourcegitcommit: 99e71ae03319ab386baf2ebde956fc2d511df8b8
+ms.openlocfilehash: 910ede5f011b18772adb483f06fb9b0d137db4cd
+ms.sourcegitcommit: 0c62042d7d030ec5296c73bccd9f9b961d84496a
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 03/25/2020
-ms.locfileid: "80242970"
+ms.locfileid: "80270418"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrer de ASP.NET Core 3,1 à 5,0
 
@@ -22,9 +22,9 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 3,1 existant 
 > [!IMPORTANT]
 > ASP.NET Core 5,0 est actuellement en version préliminaire.
 
-## <a name="prerequisites"></a>Conditions préalables requises
+## <a name="prerequisites"></a>Composants requis
 
-# <a name="visual-studio"></a>[Visual Studio](#tab/visual-studio)
+# <a name="visual-studio"></a>[Visual Studio](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-5.0.md)]
 
@@ -40,7 +40,7 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 3,1 existant 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Mettre à jour la version du SDK .NET Core dans global.json
 
-Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour la propriété `version` avec la version du kit de développement logiciel (SDK) .net 5,0 installée. Par exemple : 
+Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour la propriété `version` avec la version du kit de développement logiciel (SDK) .net 5,0 installée. Par exemple :
 
 ```diff
 {
@@ -68,26 +68,25 @@ Dans le fichier projet, mettez à jour le [moniker du Framework cible (TFM)](/do
 
 ## <a name="update-package-references"></a>Mettre à jour les références de package
 
-Dans le fichier projet, mettez à jour chaque `Microsoft.AspNetCore.*` et `Microsoft.Extensions.*` attribut `Version` de référence de package en 5.0.0 ou version ultérieure. Par exemple : 
+Dans le fichier projet, mettez à jour chaque `Microsoft.AspNetCore.*` et `Microsoft.Extensions.*` attribut `Version` de référence de package en 5.0.0 ou version ultérieure. Par exemple :
 
 ```diff
 <ItemGroup>
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
-+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.2" />
--    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.1.20124.5" />
--    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.1.20120.4" />
+-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.2" />
++    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.1.20124.5" />
++    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.1.20120.4" />
 </ItemGroup>
 ```
 
 ## <a name="update-docker-images"></a>Mettre à jour les images de l’ancrage
 
-Pour les applications qui utilisent Dockr, utilisez une image de base qui comprend ASP.NET Core 5,0. Par exemple : 
+Pour les applications qui utilisent Dockr, utilisez une image de base qui comprend ASP.NET Core 5,0. Par exemple :
 
 ```bash
 docker pull mcr.microsoft.com/dotnet/core/aspnet:5.0
 ```
 
-<!-- uncomment after the breaking changes have been published -->
-<!-- ## Review breaking changes
+## <a name="review-breaking-changes"></a>Examiner les modifications avec rupture
 
-Review 3.1-to-5.0 breaking changes across .NET Core, ASP.NET Core, and Entity Framework Core at [Breaking changes for migration from version 3.1 to 5.0](/dotnet/core/compatibility/3.1-5.0). -->
+Pour les modifications avec rupture entre .NET Core 3,1 et .NET 5,0, consultez [modifications avec rupture pour la migration de la version 3,1 vers 5,0](/dotnet/core/compatibility/3.1-5.0). ASP.NET Core et Entity Framework Core sont également inclus dans la liste.
