commit bilingual contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,43 +4,43 @@ author: scottaddie
 description: Découvrez comment migrer un projet ASP.NET Core 3,1 vers ASP.NET Core 5,0.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 03/23/2020
+ms.date: 03/24/2020
 uid: migration/31-to-50
-ms.openlocfilehash: 7f225e039f051b43c1896a6f29e174d3c2e6c2d3
-ms.sourcegitcommit: 99e71ae03319ab386baf2ebde956fc2d511df8b8
+ms.openlocfilehash: 910ede5f011b18772adb483f06fb9b0d137db4cd
+ms.sourcegitcommit: 0c62042d7d030ec5296c73bccd9f9b961d84496a
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 03/25/2020
-ms.locfileid: "80242970"
+ms.locfileid: "80270418"
 ---
-# <a name="migrate-from-aspnet-core-31-to-50"></a><span data-ttu-id="6bb1e-103">Migrer de ASP.NET Core 3,1 à 5,0</span><span class="sxs-lookup"><span data-stu-id="6bb1e-103">Migrate from ASP.NET Core 3.1 to 5.0</span></span>
+# <a name="migrate-from-aspnet-core-31-to-50"></a><span data-ttu-id="afb75-103">Migrer de ASP.NET Core 3,1 à 5,0</span><span class="sxs-lookup"><span data-stu-id="afb75-103">Migrate from ASP.NET Core 3.1 to 5.0</span></span>
 
-<span data-ttu-id="6bb1e-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="6bb1e-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="afb75-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="afb75-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="6bb1e-105">Cet article explique comment mettre à jour un projet ASP.NET Core 3,1 existant vers ASP.NET Core 5,0.</span><span class="sxs-lookup"><span data-stu-id="6bb1e-105">This article explains how to update an existing ASP.NET Core 3.1 project to ASP.NET Core 5.0.</span></span>
+<span data-ttu-id="afb75-105">Cet article explique comment mettre à jour un projet ASP.NET Core 3,1 existant vers ASP.NET Core 5,0.</span><span class="sxs-lookup"><span data-stu-id="afb75-105">This article explains how to update an existing ASP.NET Core 3.1 project to ASP.NET Core 5.0.</span></span>
 
 > [!IMPORTANT]
-> <span data-ttu-id="6bb1e-106">ASP.NET Core 5,0 est actuellement en version préliminaire.</span><span class="sxs-lookup"><span data-stu-id="6bb1e-106">ASP.NET Core 5.0 is currently in preview.</span></span>
+> <span data-ttu-id="afb75-106">ASP.NET Core 5,0 est actuellement en version préliminaire.</span><span class="sxs-lookup"><span data-stu-id="afb75-106">ASP.NET Core 5.0 is currently in preview.</span></span>
 
-## <a name="prerequisites"></a><span data-ttu-id="6bb1e-107">Conditions préalables requises</span><span class="sxs-lookup"><span data-stu-id="6bb1e-107">Prerequisites</span></span>
+## <a name="prerequisites"></a><span data-ttu-id="afb75-107">Composants requis</span><span class="sxs-lookup"><span data-stu-id="afb75-107">Prerequisites</span></span>
 
-# <a name="visual-studio"></a>[<span data-ttu-id="6bb1e-108">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="6bb1e-108">Visual Studio</span></span>](#tab/visual-studio)
+# <a name="visual-studio"></a>[<span data-ttu-id="afb75-108">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="afb75-108">Visual Studio</span></span>](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-5.0.md)]
 
-# <a name="visual-studio-code"></a>[<span data-ttu-id="6bb1e-109">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="6bb1e-109">Visual Studio Code</span></span>](#tab/visual-studio-code)
+# <a name="visual-studio-code"></a>[<span data-ttu-id="afb75-109">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="afb75-109">Visual Studio Code</span></span>](#tab/visual-studio-code)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vsc-5.0.md)]
 
-# <a name="visual-studio-for-mac"></a>[<span data-ttu-id="6bb1e-110">Visual Studio pour Mac</span><span class="sxs-lookup"><span data-stu-id="6bb1e-110">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
+# <a name="visual-studio-for-mac"></a>[<span data-ttu-id="afb75-110">Visual Studio pour Mac</span><span class="sxs-lookup"><span data-stu-id="afb75-110">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
 
 [!INCLUDE[](~/includes/net-core-prereqs-mac-5.0.md)]
 
 ---
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="6bb1e-111">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="6bb1e-111">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="afb75-111">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="afb75-111">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="6bb1e-112">Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour la propriété `version` avec la version du kit de développement logiciel (SDK) .net 5,0 installée.</span><span class="sxs-lookup"><span data-stu-id="6bb1e-112">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the .NET 5.0 SDK version that's installed.</span></span> <span data-ttu-id="6bb1e-113">Par exemple : </span><span class="sxs-lookup"><span data-stu-id="6bb1e-113">For example:</span></span>
+<span data-ttu-id="afb75-112">Si vous utilisez un fichier [global. JSON](/dotnet/core/tools/global-json) pour cibler une version spécifique de kit SDK .net Core, mettez à jour la propriété `version` avec la version du kit de développement logiciel (SDK) .net 5,0 installée.</span><span class="sxs-lookup"><span data-stu-id="afb75-112">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the .NET 5.0 SDK version that's installed.</span></span> <span data-ttu-id="afb75-113">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="afb75-113">For example:</span></span>
 
 ```diff
 {
@@ -51,9 +51,9 @@ ms.locfileid: "80242970"
 }
 ```
 
-## <a name="update-the-target-framework"></a><span data-ttu-id="6bb1e-114">Mettre à jour la version cible de .NET Framework</span><span class="sxs-lookup"><span data-stu-id="6bb1e-114">Update the target framework</span></span>
+## <a name="update-the-target-framework"></a><span data-ttu-id="afb75-114">Mettre à jour la version cible de .NET Framework</span><span class="sxs-lookup"><span data-stu-id="afb75-114">Update the target framework</span></span>
 
-<span data-ttu-id="6bb1e-115">Dans le fichier projet, mettez à jour le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) pour `netcoreapp5.0`:</span><span class="sxs-lookup"><span data-stu-id="6bb1e-115">In the project file, update the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `netcoreapp5.0`:</span></span>
+<span data-ttu-id="afb75-115">Dans le fichier projet, mettez à jour le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) pour `netcoreapp5.0`:</span><span class="sxs-lookup"><span data-stu-id="afb75-115">In the project file, update the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `netcoreapp5.0`:</span></span>
 
 ```diff
 <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -66,28 +66,27 @@ ms.locfileid: "80242970"
 </Project>
 ```
 
-## <a name="update-package-references"></a><span data-ttu-id="6bb1e-116">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="6bb1e-116">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="afb75-116">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="afb75-116">Update package references</span></span>
 
-<span data-ttu-id="6bb1e-117">Dans le fichier projet, mettez à jour chaque `Microsoft.AspNetCore.*` et `Microsoft.Extensions.*` attribut `Version` de référence de package en 5.0.0 ou version ultérieure.</span><span class="sxs-lookup"><span data-stu-id="6bb1e-117">In the project file, update each `Microsoft.AspNetCore.*` and `Microsoft.Extensions.*` package reference's `Version` attribute to 5.0.0 or later.</span></span> <span data-ttu-id="6bb1e-118">Par exemple : </span><span class="sxs-lookup"><span data-stu-id="6bb1e-118">For example:</span></span>
+<span data-ttu-id="afb75-117">Dans le fichier projet, mettez à jour chaque `Microsoft.AspNetCore.*` et `Microsoft.Extensions.*` attribut `Version` de référence de package en 5.0.0 ou version ultérieure.</span><span class="sxs-lookup"><span data-stu-id="afb75-117">In the project file, update each `Microsoft.AspNetCore.*` and `Microsoft.Extensions.*` package reference's `Version` attribute to 5.0.0 or later.</span></span> <span data-ttu-id="afb75-118">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="afb75-118">For example:</span></span>
 
 ```diff
 <ItemGroup>
-+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
-+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.2" />
--    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.1.20124.5" />
--    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.1.20120.4" />
+-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.2" />
++    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0-preview.1.20124.5" />
++    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.1.20120.4" />
 </ItemGroup>
 ```
 
-## <a name="update-docker-images"></a><span data-ttu-id="6bb1e-119">Mettre à jour les images de l’ancrage</span><span class="sxs-lookup"><span data-stu-id="6bb1e-119">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="afb75-119">Mettre à jour les images de l’ancrage</span><span class="sxs-lookup"><span data-stu-id="afb75-119">Update Docker images</span></span>
 
-<span data-ttu-id="6bb1e-120">Pour les applications qui utilisent Dockr, utilisez une image de base qui comprend ASP.NET Core 5,0.</span><span class="sxs-lookup"><span data-stu-id="6bb1e-120">For apps using Docker, use a base image that includes ASP.NET Core 5.0.</span></span> <span data-ttu-id="6bb1e-121">Par exemple : </span><span class="sxs-lookup"><span data-stu-id="6bb1e-121">For example:</span></span>
+<span data-ttu-id="afb75-120">Pour les applications qui utilisent Dockr, utilisez une image de base qui comprend ASP.NET Core 5,0.</span><span class="sxs-lookup"><span data-stu-id="afb75-120">For apps using Docker, use a base image that includes ASP.NET Core 5.0.</span></span> <span data-ttu-id="afb75-121">Par exemple :</span><span class="sxs-lookup"><span data-stu-id="afb75-121">For example:</span></span>
 
 ```bash
 docker pull mcr.microsoft.com/dotnet/core/aspnet:5.0
 ```
 
-<!-- uncomment after the breaking changes have been published -->
-<!-- ## Review breaking changes
+## <a name="review-breaking-changes"></a><span data-ttu-id="afb75-122">Examiner les modifications avec rupture</span><span class="sxs-lookup"><span data-stu-id="afb75-122">Review breaking changes</span></span>
 
-Review 3.1-to-5.0 breaking changes across .NET Core, ASP.NET Core, and Entity Framework Core at [Breaking changes for migration from version 3.1 to 5.0](/dotnet/core/compatibility/3.1-5.0). -->
+<span data-ttu-id="afb75-123">Pour les modifications avec rupture entre .NET Core 3,1 et .NET 5,0, consultez [modifications avec rupture pour la migration de la version 3,1 vers 5,0](/dotnet/core/compatibility/3.1-5.0).</span><span class="sxs-lookup"><span data-stu-id="afb75-123">For breaking changes from .NET Core 3.1 to .NET 5.0, see [Breaking changes for migration from version 3.1 to 5.0](/dotnet/core/compatibility/3.1-5.0).</span></span> <span data-ttu-id="afb75-124">ASP.NET Core et Entity Framework Core sont également inclus dans la liste.</span><span class="sxs-lookup"><span data-stu-id="afb75-124">ASP.NET Core and Entity Framework Core are also included in the list.</span></span>
